--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,32 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-	<h1>
-		Titulo
-	</h1>
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<title>Programa de beneficios Universidad CAECE</title>
 	
+	<link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css"/>
+
+	<!--<link rel="stylesheet" href="bower_components/angular-material/themes/blue-theme.css"/>-->
+	<link rel="stylesheet" href="style/style.css"/>
+
+	<script src="bower_components/angular/angular.min.js"></script>
+	<script src="bower_components/angular-animate/angular-animate.js"></script>
+	<script src="bower_components/angular-aria/angular-aria.js"></script>
+  	<script src="bower_components/angular-material/angular-material.js"></script>
+  	<script src="app.js"></script>
+  	
+	<!--<link rel="stylesheet" href="fonts.googleapis.com/css?family=Roboto">-->
+</hea1d>
+<body ng-app="StarterApp" ng-controller="ListController" layout="column" layout-align="top center">
+	<md-toolbar>
+		<div class="md-toolbar-tools">
+		<md-button hide-gt-sm class="md-icon-button">
+				<md-icon aria-label="Menu" md-svg-src="bower_components/material-design-icons/navigation/svg/design/ic_menu_24px.svg"></md-icon>
+		</md-button>
+			<span class="md-flex">
+				Programa de beneficios Universidad CAECE
+			</span>
+		</div>
+	</md-toolbar>
 </body>
 </html>
